--- a/static/styles/sign_up.css
+++ b/static/styles/sign_up.css
@@ -66,7 +66,7 @@ form input {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  border: 1px ;
+  border: 1px;
   border-radius: 4px;
   box-sizing: border-box;
   font-size: 16px;
@@ -74,7 +74,7 @@ form input {
 }
 
 form button {
-  background-color: rgba(255,201,14,255);
+  background-color: rgba(255, 201, 14, 255);
   color: black;
   padding: 10px 20px;
   border: none;
@@ -86,12 +86,12 @@ form button {
 }
 
 form button:hover {
-  background-color: rgba(255,201,14,255);
+  background-color: rgba(255, 201, 14, 255);
 }
 
-p{
- font-style: bold;
- font-size: 20px;
- text-align: center;
- margin-bottom: 20px;
+p {
+  font-style: bold;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
