--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -23,7 +23,8 @@ header {
 }
 
 header h1 {
-  font-size: 1.5rem; /* Using rem for font sizes */
+  font-size: 1.5rem;
+  /* Using rem for font sizes */
 }
 
 header p {
@@ -34,13 +35,15 @@ header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap; /* Allow wrapping on smaller screens */
+  flex-wrap: wrap;
+  /* Allow wrapping on smaller screens */
 }
 
 header nav ul {
   list-style: none;
   display: flex;
-  gap: 1rem; /* Using gap for spacing */
+  gap: 1rem;
+  /* Using gap for spacing */
 }
 
 header nav ul li {
@@ -68,59 +71,78 @@ header img {
 /* Usando media queries para ajustar la imagen según el tamaño de la pantalla */
 @media (min-width: 600px) {
   header img {
-    width: 45%; /* Aumenta el tamaño de la imagen a medida que el espacio disponible crece */
-    min-width: 80px; /* Tamaño mínimo mayor para pantallas más grandes */
+    width: 45%;
+    /* Aumenta el tamaño de la imagen a medida que el espacio disponible crece */
+    min-width: 80px;
+    /* Tamaño mínimo mayor para pantallas más grandes */
   }
 }
 
 @media (min-width: 1024px) {
   header img {
-    width: 60%; /* Aún más grande para pantallas grandes */
-    min-width: 100px; /* Tamaño mínimo para pantallas grandes */
+    width: 60%;
+    /* Aún más grande para pantallas grandes */
+    min-width: 100px;
+    /* Tamaño mínimo para pantallas grandes */
   }
 }
 
 /* carrousel */
 .slide-box {
-    width: 100%;
-    height: auto;
-    margin: 50px auto 0;
-    overflow: hidden;
+  width: 100%;
+  height: auto;
+  margin: 50px auto 0;
+  overflow: hidden;
 }
 
 .slide-box ul {
-    display: flex;
-    padding: 0;
-    width: 300%;
-    animation: slide 20s infinite alternate ease-in-out;
+  display: flex;
+  padding: 0;
+  width: 300%;
+  animation: slide 20s infinite alternate ease-in-out;
 }
 
-.slide-box li{
-    width: 100%;
-    list-style: none;
-    position: relative;
+.slide-box li {
+  width: 100%;
+  list-style: none;
+  position: relative;
 }
 
-.slide-box img{
-    width: 100%;
+.slide-box img {
+  width: 100%;
 }
 
 @keyframes slide {
-    0% { margin-left: 0; }
-    33% { margin-left: 0; }
+  0% {
+    margin-left: 0;
+  }
 
-    36% { margin-left: -100%; }
-    66% { margin-left: -100%; }
+  33% {
+    margin-left: 0;
+  }
 
-    69% { margin-left: -200%; }
-    100% { margin-left: -200%; }
+  36% {
+    margin-left: -100%;
+  }
+
+  66% {
+    margin-left: -100%;
+  }
+
+  69% {
+    margin-left: -200%;
+  }
+
+  100% {
+    margin-left: -200%;
+  }
 }
 
 @media (max-width: 991px) {
-    .slide-box {
-        width: 100%;
-    }
-    
+  .slide-box {
+    width: 100%;
+  }
+
 }
 
 h2 {
@@ -134,29 +156,38 @@ h2 {
 /* Product Styles */
 .products {
   display: flex;
-  flex-wrap: wrap; /* Allowing flexibility */
-  justify-content: center; /* Centering content */
-  gap: 2rem; /* Adding space between items */
+  flex-wrap: wrap;
+  /* Allowing flexibility */
+  justify-content: center;
+  /* Centering content */
+  gap: 2rem;
+  /* Adding space between items */
 }
 
 .products div {
-  flex: 1 1 300px; /* Flexible width with a minimum */
-  text-align: center; /* Center content */
+  flex: 1 1 300px;
+  /* Flexible width with a minimum */
+  text-align: center;
+  /* Center content */
 }
 
 .products img {
   width: 100%;
-  max-width: 300px; /* Responsive width */
-  height: auto; /* Maintain aspect ratio */
+  max-width: 300px;
+  /* Responsive width */
+  height: auto;
+  /* Maintain aspect ratio */
 }
 
 /* Details */
 details {
-  text-align: center; /* Center content */
+  text-align: center;
+  /* Center content */
 }
 
 details summary {
   font-size: 1.2rem;
+  margin-bottom: 15px;
 }
 
 details summary:hover {
@@ -167,95 +198,225 @@ details summary:hover {
 .cat-container {
   display: flex;
   justify-content: space-around;
-  align-items: center; /* Alinea verticalmente al centro */
-  flex-wrap: wrap; /* Permite que los elementos se ajusten a medida que cambia el tamaño de la pantalla */
+  align-items: center;
+  /* Alinea verticalmente al centro */
+  flex-wrap: wrap;
+  /* Permite que los elementos se ajusten a medida que cambia el tamaño de la pantalla */
   margin: 20px 0;
-  gap: 20px; /* Espaciado entre elementos para evitar que se amontonen */
+  gap: 20px;
+  /* Espaciado entre elementos para evitar que se amontonen */
 }
 
 /* Imágenes de categoría (gatos y perros) */
 .cat-image,
 .dog-image {
-  width: 200px; /* Tamaño más pequeño para dispositivos móviles */
+  width: 200px;
+  /* Tamaño más pequeño para dispositivos móviles */
   height: 200px;
-  border-radius: 100%; /* Mantiene la forma circular */
-  object-fit: cover; /* Asegura que la imagen cubra el contenedor */
-}
-
-/* Media queries para hacerlas más grandes en pantallas mayores */
-@media (min-width: 600px) {
-  .cat-image,
-  .dog-image {
-    width: 250px; /* Ajusta el tamaño a medida que la pantalla crece */
-    height: 250px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .cat-image,
-  .dog-image {
-    width: 300px; /* Tamaño máximo para pantallas grandes */
-    height: 300px;
-  }
+  border-radius: 100%;
+  /* Mantiene la forma circular */
+  object-fit: cover;
+  /* Asegura que la imagen cubra el contenedor */
 }
 
 /* Footer base styles */
 footer {
-  background-color: hsl(36, 87%, 51%); /* Dark background color */
-  color: white; /* White text color */
-  padding: 20px; /* Padding around the footer */
+  background-color: hsl(36, 87%, 51%);
+  /* Dark background color */
+  color: white;
+  /* White text color */
+  padding: 20px;
+  /* Padding around the footer */
   display: flex;
-  justify-content: space-between; /* Distribute items across the width */
-  align-items: center; /* Align items vertically */
+  justify-content: space-between;
+  /* Distribute items across the width */
+  align-items: center;
+  /* Align items vertically */
 }
 
 /* Navigation styles */
 nav ul {
-  list-style: none; /* Remove bullet points from the list */
-  padding: 0; /* Remove default padding */
-  margin: 0; /* Remove default margin */
-  display: flex; /* Display as a horizontal row */
+  list-style: none;
+  /* Remove bullet points from the list */
+  padding: 0;
+  /* Remove default padding */
+  margin: 0;
+  /* Remove default margin */
+  display: flex;
+  /* Display as a horizontal row */
 }
 
 nav ul li {
-  margin-right: 20px; /* Spacing between items */
+  margin-right: 20px;
+  /* Spacing between items */
 }
 
 nav ul li a {
-  text-decoration: none; /* Remove underline from links */
-  color: white; /* Keep text white */
+  text-decoration: none;
+  /* Remove underline from links */
+  color: white;
+  /* Keep text white */
 }
 
 nav ul li a:hover {
-  color: #ddd; /* Change color on hover */
+  color: #ddd;
+  /* Change color on hover */
 }
 
 /* Payment methods styles */
 .payment-methods {
-  display: flex; /* Display as a horizontal row */
+  display: flex;
+  /* Display as a horizontal row */
 }
 
 .payment-methods i {
-  font-size: 24px; /* Icon size */
-  margin-right: 10px; /* Spacing between icons */
-  color: white; /* White icon color */
+  font-size: 24px;
+  /* Icon size */
+  margin-right: 10px;
+  /* Spacing between icons */
+  color: white;
+  /* White icon color */
 }
 
 /* Social media styles */
 .social-media {
-  display: flex; /* Display as a horizontal row */
+  display: flex;
+  /* Display as a horizontal row */
 }
 
 .social-media a {
-  text-decoration: none; /* No underline for links */
+  text-decoration: none;
+  /* No underline for links */
 }
 
 .social-media i {
-  font-size: 24px; /* Icon size */
-  margin-right: 10px; /* Spacing between icons */
-  color: white; /* White icon color */
+  font-size: 24px;
+  /* Icon size */
+  margin-right: 10px;
+  /* Spacing between icons */
+  color: white;
+  /* White icon color */
 }
 
 .social-media i:hover {
-  color: #ddd; /* Change color on hover */
+  color: #ddd;
+  /* Change color on hover */
+}
+
+
+
+
+@media (min-width: 0px) and (max-width: 600px) {
+
+  .cat-image,
+  .dog-image {
+    width: 250px;
+    /* Ajusta el tamaño a medida que la pantalla crece */
+    height: 250px;
+  }
+
+  footer {
+    padding: 20px;
+    /* Padding around the footer */
+    display: block;
+    justify-content: space-between;
+    /* Distribute items across the width */
+    align-items: center;
+  }
+
+  /* Payment methods styles */
+  .payment-methods {
+    display: flex;
+    /* Display as a horizontal row */
+  }
+
+  .social-media {
+    display: flex;
+  }
+
+
+  .payment-methods,
+  .social-media {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+  }
+
+  .box-nav {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  header nav ul {
+    flex-wrap: wrap;
+  }
+
+  header nav ul li a {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1023px) {
+
+  .cat-image,
+  .dog-image {
+    width: 300px;
+    /* Tamaño máximo para pantallas grandes */
+    height: 300px;
+  }
+
+  footer {
+    padding: 20px;
+    /* Padding around the footer */
+    display: block;
+    justify-content: space-between;
+    /* Distribute items across the width */
+    align-items: center;
+  }
+
+  /* Payment methods styles */
+  .payment-methods {
+    display: flex;
+    /* Display as a horizontal row */
+  }
+
+  .social-media {
+    display: flex;
+  }
+
+
+  .payment-methods,
+  .social-media {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+  }
+
+  .box-nav {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+
+@media (min-width: 1024px) {
+  footer {
+    padding: 20px;
+    /* Padding around the footer */
+    display: flex;
+    justify-content: space-between;
+    /* Distribute items across the width */
+    align-items: center;
+  }
+
+  /* Payment methods styles */
+  .payment-methods {
+    display: flex;
+    /* Display as a horizontal row */
+  }
+
+  .social-media {
+    display: flex;
+  }
+
 }
