--- a/static/styles/contact_style.css
+++ b/static/styles/contact_style.css
@@ -372,7 +372,15 @@ nav ul li a:hover {
     flex-wrap: wrap;
   }
   header nav ul li a {
-  font-size: 12px;
+  font-size: 15px;
+  }
+  header nav ul li {
+    margin-right: 0px;
+  }
+  @media (max-width: 390px) {
+    header nav ul li a {
+      font-size: 12px;
+    }
   }
 }
 
