--- a/static/styles/contact_style.css
+++ b/static/styles/contact_style.css
@@ -7,6 +7,10 @@
   padding: 0;
 }
 
+html {
+  width: 100%;
+}
+
 /* Header Styles */
 header {
   background-color: #ffffff;
@@ -57,48 +61,47 @@ header img {
 /* Usando media queries para ajustar la imagen según el tamaño de la pantalla */
 @media (min-width: 600px) {
   header img {
-    width: 45%;
-    /* Aumenta el tamaño de la imagen a medida que el espacio disponible crece */
-    min-width: 80px;
-    /* Tamaño mínimo mayor para pantallas más grandes */
+    width: 45%; /* Aumenta el tamaño de la imagen a medida que el espacio disponible crece */
+    min-width: 80px; /* Tamaño mínimo mayor para pantallas más grandes */
   }
 }
 
 @media (min-width: 1024px) {
   header img {
-    width: 60%;
-    /* Aún más grande para pantallas grandes */
-    min-width: 100px;
-    /* Tamaño mínimo para pantallas grandes */
+    width: 60%; /* Aún más grande para pantallas grandes */
+    min-width: 100px; /* Tamaño mínimo para pantallas grandes */
   }
 }
 
 .box_form_ubication {
   display: flex;
-  background-color: hsl(36, 87%, 51%);
   justify-content: center;
   align-items: start;
-  margin: 50px;
-  border-radius: 50px;
 }
 
 .ubication_box {
   width: 50%;
-
+  background-color: hsl(36, 87%, 51%);
   align-items: center;
   justify-content: center;
   vertical-align: middle;
   margin-left: 50px;
   vertical-align: top;
   margin: 20px 25px;
+  padding: 50px;
+  border-radius: 50px;
+  min-height: 700px;
 }
 
 .form_box {
-  width: 50%;
+  width: 85%;
   align-items: center;
   justify-content: center;
   vertical-align: middle;
   margin: 20px 25px 20px 50px;
+  background-color: hsl(36, 87%, 51%);
+  padding: 50px;
+  border-radius: 50px;
 }
 
 .contact_form {
@@ -107,7 +110,7 @@ header img {
 
 .form-control,
 .form-select,
-.form-texarea,
+.form-textarea,
 .form-radio {
   margin: 10px 0px 10px 10px;
 }
@@ -127,11 +130,13 @@ header img {
   border-radius: 4px;
   box-sizing: border-box;
   font-size: 16px;
+
 }
+
 input,
 select,
 textarea {
-  background-color: #e0c172;
+  background-color: #E0C172;
 }
 
 .form-select {
@@ -146,44 +151,53 @@ textarea {
   font-size: 16px;
 }
 
-.radio-cat-dog,
 textarea {
-  margin: 0px;
   border-radius: 5px;
   width: 90%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px;
+  margin: 10px 10px 10px 3px;
+}
+
+.radio-cat-dog {
+  margin-left: 50px;
   padding: 10px;
   margin-bottom: 10px;
   font-size: 16px;
   display: flex;
-  border: 1px;
 }
 
-.container {
-  display: flex;
-  justify-content: space-between;
+.label-dog-cat {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 10px;
 }
 
-.form-wrapper {
-  flex: 1;
-  margin-right: 20px; /* Adjust the margin between form and map as you like */
+input[type="radio"] {
+  display: none;
 }
 
-.form-textarea {
-  margin-bottom: 20px;
+input[type="radio"]+*::before {
+  content: "";
+  display: inline-block;
+  vertical-align: bottom;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.3rem;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: black;
 }
 
-.form-textarea label {
-  display: block;
-  margin-bottom: 5px;
+input[type="radio"]:checked+* {
+  color: black;
 }
 
-.form-textarea textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  resize: vertical;
+input[type="radio"]:checked+*::before {
+  background: radial-gradient(black 0%, black 40%, transparent 50%, transparent);
+  border-color: black;
 }
 
 .button-send {
@@ -192,29 +206,53 @@ textarea {
   display: flex;
   border-radius: 30px;
   height: 50px;
-  margin-top: 20px;
+}
+
+.button-send input {
+  border-radius: 10px;
 }
 
 /* Ubication styles */
 
-@media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-  }
 
-  .form-wrapper {
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
+.ubication_box_map {
+  max-width: 1100px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: hsl(36, 87%, 51%);
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  margin-left: 50px;
+  vertical-align: top;
+  margin: 20px 25px;
+  padding: 50px;
+  border-radius: 50px;
 }
 
 .map {
+  width: 100%;
+  height: 615px;
+  /* Increased height for the map container */
+  overflow: hidden;
+  position: relative;
   border-radius: 50px;
-  flex: 1;
 }
+
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  top: 0;
+  left: 0;
+}
+
 .ubication_title {
   margin-bottom: 20px;
 }
+
+
 
 /* Footer base styles */
 footer {
@@ -224,7 +262,7 @@ footer {
   /* White text color */
   padding: 20px;
   /* Padding around the footer */
-  display: flex;
+  /* display: flex; */
   justify-content: space-between;
   /* Distribute items across the width */
   align-items: center;
@@ -299,4 +337,124 @@ nav ul li a:hover {
   color: #ddd;
   /* Change color on hover */
 }
+
 /* Path: static/styles/style.css */
+
+/* Usando media queries para ajustar la imagen según el tamaño de la pantalla */
+
+@media (min-width: 0px) and (max-width: 600px) 
+{
+  .box_form_ubication {
+    display: block;
+    width: 90%;
+    padding: 10px;
+  }
+
+  .form_box {
+    width: 95%;
+    margin: 50px 10px;
+  }
+
+  .ubication_box_map {
+    margin: 10px;
+  }
+
+  .payment-methods, .social-media{
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+  }
+  .box-nav{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  header nav ul{
+    flex-wrap: wrap;
+  }
+  header nav ul li a {
+  font-size: 15px;
+  }
+  header nav ul li {
+    margin-right: 0px;
+  }
+  @media (max-width: 390px) {
+    header nav ul li a {
+      font-size: 12px;
+    }
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1023px) {
+  .box_form_ubication {
+    display: block;
+    margin: auto;
+  }
+
+  .box_form_ubication {
+    display: block;
+    width: 100%;
+    padding: 10px;
+  }
+
+  .form_box {
+    width: 75%;
+    margin: 50px auto;
+    align-items: center;
+  }
+
+  .ubication_box_map {
+    margin: 50px auto;
+    width: 75%;
+  }
+  footer{
+    padding: 20px; /* Padding around the footer */
+    display: flex;
+    justify-content: space-between; /* Distribute items across the width */
+    align-items: center;
+  }
+  /* Payment methods styles */
+.payment-methods {
+  display: flex; /* Display as a horizontal row */
+}
+  .social-media
+  {display: flex;
+  }
+}
+  
+
+@media (min-width: 1024px) {
+
+
+  .box_form_ubication {
+    display: block inline;
+    width: 100%;
+    padding: 10px;
+  }
+
+  .form_box {
+    width: 40%;
+    margin: 50px auto;
+    align-items: center;
+    max-height: 900px;
+  }
+
+  .ubication_box_map {
+    margin: 50px auto;
+    width: 40%;
+    max-height: 900px;
+  }
+  footer{
+    padding: 20px; /* Padding around the footer */
+    display: flex;
+    justify-content: space-between; /* Distribute items across the width */
+    align-items: center;
+  }
+  /* Payment methods styles */
+.payment-methods {
+  display: flex; /* Display as a horizontal row */
+}
+  .social-media
+  {display: flex;
+  }
+
+}
