--- a/templates/contact.html
+++ b/templates/contact.html
@@ -83,7 +83,7 @@
           </div>
           <div class="button-send">
             <!-- Botón de Envío -->
-            <input type="image" id="image-button" alt="Enviar" src="/static/img/send-button.PNG" />
+            <input type="image" id="image-button" alt="Enviar" src="/static/img/send-button.webp" />
           </div>
         </form>
       </div>
